--- a/minions-flyway-demo/pom.xml
+++ b/minions-flyway-demo/pom.xml
@@ -2,43 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<!-- parent -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
-	<!-- self -->
 	<groupId>com.bfu</groupId>
-	<artifactId>minions-flyway-core</artifactId>
+	<artifactId>minions-flyway-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>minions-flyway-core</name>
+	<name>minions-flyway-demo</name>
 	<description>Demo project for Spring Boot</description>
 
-	<!-- properties -->
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
-	<!-- dependencies -->
 	<dependencies>
-
-		<!-- spring-boot-starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- flyway-core -->
 		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
-
-		<!-- spring-boot-starter-test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
